...

    <string name="review">서평</string>
    <string name="comment">댓글</string>
    <string name="like">좋아요</string>
    <string name="exchange">교환</string>
    <string name="bookmark">찜하기</string>
    <string name="shelf">책장</string>
    <string name="profile">프로필</string>
    <!-- feed_post -->
    <string name="feed_poster">SeoRo</string>
    <string name="feed_title">돈의 심리학</string>
    <string name="feed_dash">-</string>
    <string name="feed_author">모건 하우절</string>
    <string name="feed_content">책을 읽은 후 느낀점</string>
...
    <string name="cancel">취소</string>
    <string name="barter_message_to_user">%1$s님이 교환을 신청하였습니다.</string>


    <!--follow-->
    <string name="follow">팔로우</string>
    <string name="unfollow">언팔로우</string>
    <string name="following">팔로잉</string>

    <!--book detail-->
    <string name="book_detail_title">도서 상세</string>
    <string name="book_cover_desc">도서 표지 이미지</string>
    <string name="toggle_wishlist">위시리스트 토글</string>
...
