...
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:lineSpacingExtra="4dp"
        android:maxLines="10"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/btnMore"
        app:layout_constraintStart_toStartOf="@id/tvAuthor"
        app:layout_constraintTop_toBottomOf="@id/tvAuthor"
        tools:text="댓글 내용입니다." />
...
