...

    <action
        android:id="@+id/action_global_to_UserProfileFragment"
        app:destination="@id/userProfileFragment" />

    <action
        android:id="@+id/action_global_bookDetail"
        app:destination="@id/bookDetailFragment" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.librarytogether.feature.home.HomeFragment"
        android:label="@string/nav_home"
...
